--- a/src/Navigation/Navigation.css
+++ b/src/Navigation/Navigation.css
@@ -24,6 +24,32 @@
       margin-left: auto;
     }
   }
-  
 
+  nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav li {
+    margin: 0 10px;
+  }
+  
+  nav a {
+    text-decoration: none;
+    color: #555;
+  }
+  
+  nav a.active {
+    color: gold;
+    font-weight: bold;
+    border-bottom: 2px solid gold;
+  }
   
